[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/menu.gd" type="Script" id=1]
[ext_resource path="res://meta objects/buttons.tscn" type="PackedScene" id=2]
[ext_resource path="res://meta objects/Button.tscn" type="PackedScene" id=3]
[ext_resource path="res://meta objects/Label.tscn" type="PackedScene" id=4]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="buttons" parent="." instance=ExtResource( 2 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 512.0
margin_top = 200.0
custom_constants/separation = 24
alignment = 1

[node name="Button" parent="buttons" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 98.0
margin_right = 512.0
margin_bottom = 150.0
text = "Start"

[node name="Button2" parent="buttons" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 174.0
margin_right = 512.0
margin_bottom = 226.0
text = "Store"

[node name="Button3" parent="buttons" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 250.0
margin_right = 512.0
margin_bottom = 302.0
text = "Quit"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -512.0
margin_bottom = -98.0
custom_constants/separation = 24
alignment = 1

[node name="Label" parent="VBoxContainer" instance=ExtResource( 4 )]
margin_top = 88.0
margin_right = 512.0
margin_bottom = 134.0

[node name="Label2" parent="VBoxContainer" instance=ExtResource( 4 )]
margin_top = 158.0
margin_right = 512.0
margin_bottom = 204.0
text = "xp"

[node name="Label3" parent="VBoxContainer" instance=ExtResource( 4 )]
margin_top = 228.0
margin_right = 512.0
margin_bottom = 274.0
text = "money"

[node name="Label4" parent="VBoxContainer" instance=ExtResource( 4 )]
margin_top = 298.0
margin_right = 512.0
margin_bottom = 344.0
text = "health"

[node name="Label5" parent="VBoxContainer" instance=ExtResource( 4 )]
margin_top = 368.0
margin_right = 512.0
margin_bottom = 414.0
text = "ammo"

[connection signal="button_down" from="buttons/Button" to="." method="_on_Button_button_down"]
[connection signal="button_down" from="buttons/Button2" to="." method="_on_Button2_button_down"]
[connection signal="button_down" from="buttons/Button3" to="." method="_on_Button3_button_down"]

[editable path="buttons"]
